--- a/feedback.html
+++ b/feedback.html
@@ -66,6 +66,15 @@
         </div>
     </div>
 
+    <div class="container">
+        <div class="row">
+            <div class="col-12" align="center" style="margin-top: 30px;">
+                <a type="button" href="index.html">Go to Home Page</a>
+            </div>
+        </div>
+
+    </div>
+
     <script type="text/JavaScript">
         function endshopping() {
             localStorage.clear();
